--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~51.0.28",
     "expo-barcode-scanner": "~13.0.1",
     "expo-constants": "~16.0.2",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -28,10 +29,12 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^11.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-paper": "^5.12.5",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
